# dev-bootstrap

./: .gitignore  .repo-meta.yml  404.html  README.md  bootstrap.sh  clone-repos.sh  gh-discovery.sh  gh_repos.csv  gl-discovery.sh  gl_repos.csv  mkdocs.yml  notcran.yml  pyproject.toml  update-all.sh
.github/: copilot-instructions.md
.github/workflows/: docs.yml
docs/: index.md  installation.md  repo-meta.md  scan.md  shell-scripts.md  usage.md
installation/: index.html
search/: search_index.json
shell/: clone-repos.sh  gh-discovery.sh
site/: index.html  sitemap.xml
site/repo-meta/: index.html
site/scan/: index.html
site/shell-scripts/: index.html
site/usage/: index.html
src/devbootstrap/: bootstrap.py  cli.py  models.py
tests/: test_discover.py
